[gd_scene load_steps=5 format=3 uid="uid://5n0ykkhc8qe3"]

[ext_resource type="Script" path="res://GameDVDCardtridge/HexagonEngine-v3/HexagonEngineV3.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://djvolsvxm7mhu" path="res://GameDVDCardtridge/HexagonEngine-v3/SpareParts/UI/UIplace.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bbwivv62qkoec" path="res://GameDVDCardtridge/HexagonEngine-v3/SpareParts/UI/MainUINodes/Scaffolds/HexagonEnginev3PauseMainMenu.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://cy0tn2gj8kmdj" path="res://GameDVDCardtridge/HexagonEngine-v3/LevelCartridge/Base/InitLevelBaseAdded.tscn" id="3_a3q1l"]

[node name="HexagonEngineV3" type="Node"]
script = ExtResource("1")
PauseMainMenuFile = ExtResource("3")
InitLevelFile = ExtResource("3_a3q1l")

[node name="LevelSpace" type="Node" parent="."]

[node name="UICanvas" type="CanvasLayer" parent="."]

[node name="UIplace" parent="UICanvas" instance=ExtResource("2")]

[connection signal="doChangeDVD" from="UICanvas/UIplace" to="." method="_on_UIplace_doChangeDVD"]
[connection signal="doShutdown" from="UICanvas/UIplace" to="." method="_on_UIplace_doShutdown"]
